--- a/src/app.html
+++ b/src/app.html
@@ -1,15 +1,19 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/Logo Solo.svg" type="image/svg+xml" />
-		<link rel="alternate icon" href="%sveltekit.assets%/favicon.png" />
-		<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
-		<meta name="theme-color" content="#1e398d" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%sveltekit.head%
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+
+<head>
+	<meta charset="utf-8" />
+	<link rel="icon" href="%sveltekit.assets%/Logo Solo.svg" type="image/svg+xml" />
+	<link rel="alternate icon" href="%sveltekit.assets%/favicon.png" />
+	<link rel="manifest" href="%sveltekit.assets%/manifest.json" />
+	<meta name="theme-color" content="#1e398d" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<title>HWIS Class Scheduler</title>
+	%sveltekit.head%
+</head>
+
+<body data-sveltekit-preload-data="hover">
+	<div style="display: contents">%sveltekit.body%</div>
+</body>
+
 </html>
